Move record/stop/pause buttons to make them always visible. Fix but with image viewer.

--- a/src/Main.scss
+++ b/src/Main.scss
@@ -54,8 +54,8 @@ $max-width: 760px;
 }
 
 .big-button {
-    height: 100px;
     padding: 5px;
+    opacity: .8;
 }
 
 .video-placeholder {
@@ -70,11 +70,6 @@ $max-width: 760px;
     position: sticky;
     top: 0;
     z-index: 1;
-}
-
-.footer {
-    padding-top: 3px;
-    padding-bottom: 3px;
 }
 
 .expansion-button-container {
@@ -101,9 +96,15 @@ $max-width: 760px;
     display: none
 }
 
-/* Media query to hide tab text when screen width is less than 448 pixels */
+.overlay-button {
+    position: absolute;
+    z-index: 1
+}
+
+/* Media query to hide tab text when screen width is less than 448 pixels 
 @media screen and (max-width: 410px) {
     .vanishing {
       display: none;
     }
   }
+*/
